# sutra

sutra-extensible-effects/: flake.nix  hie.yaml  shell.nix  sutra-extensible-effects.cabal
sutra-extensible-effects/core/Control/: Eff.hs
sutra-extensible-effects/core/Control/Eff/: Internal.hs
sutra-extensible-effects/core/Data/: FTCQueue.hs  OpenUnion.hs
sutra-microlens/: flake.nix  sutra-microlens.cabal
sutra-microlens/core/Lens/: Micro.hs
sutra-microlens/core/Lens/Micro/: Extras.hs  Internal.hs  Type.hs
sutra-microlens/nix/: shell.nix
sutra-microlens/th/Lens/Micro/: TH.hs
sutra-microlens/th/Lens/Micro/Internal/: TH.hs
