cabal-version: 3.0
name:          sutra-microlens
version:       0.1.0.0
author:        mtwtkman
maintainer:    924277+mtwtkman@users.noreply.github.com
build-type:    Simple

common warnings
  ghc-options: -Wall

library sutra-microlens-core
  hs-source-dirs:   core
  default-language: Haskell2010
  build-depends:    base
  exposed-modules:
    Lens.Micro
    Lens.Micro.Extras
    Lens.Micro.Internal
    Lens.Micro.Type

library sutra-microlens-th
  hs-source-dirs:   th
  default-language: Haskell2010
  build-depends:
    , base
    , sutra-microlens-core
    , template-haskell
    , th-abstraction
    , containers
